{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 94,
  "lineage": "e2b409a5-1a54-5163-4c80-ca6a16e70f0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ec2-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183826114:listener/app/restaurante-eks-alb/838ead75e9c2ee86/09383aca00a867c2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:590183826114:targetgroup/restaurante-eks-tg/34eee405bba566ee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183826114:listener/app/restaurante-eks-alb/838ead75e9c2ee86/09383aca00a867c2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:590183826114:loadbalancer/app/restaurante-eks-alb/838ead75e9c2ee86",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.default-target-group",
            "aws_lb.restaurante-lb",
            "aws_security_group.load-balancer",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183826114:targetgroup/restaurante-eks-tg/34eee405bba566ee",
            "arn_suffix": "targetgroup/restaurante-eks-tg/34eee405bba566ee",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183826114:targetgroup/restaurante-eks-tg/34eee405bba566ee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:590183826114:loadbalancer/app/restaurante-eks-alb/838ead75e9c2ee86"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "restaurante-eks-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b5a72fe8f12106a9"
          },
          "dependencies": [
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05053047b01ac33b8",
            "associate_with_private_ip": "10.0.0.5",
            "association_id": "eipassoc-00a184a8017632476",
            "domain": "vpc",
            "id": "eipalloc-05053047b01ac33b8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a4593457e097d5c9",
            "private_dns": "ip-10-0-1-147.ec2.internal",
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-35-172-189-29.compute-1.amazonaws.com",
            "public_ip": "35.172.189.29",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.restaurante-vpc-igw",
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "restaurante-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183826114:internet-gateway/igw-03ea18ea4c069c268",
            "id": "igw-03ea18ea4c069c268",
            "owner_id": "590183826114",
            "tags": {
              "Name": "terraform-lab-igw"
            },
            "tags_all": {
              "Name": "terraform-lab-igw"
            },
            "vpc_id": "vpc-0b5a72fe8f12106a9"
          },
          "dependencies": [
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "restaurante-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183826114:loadbalancer/app/restaurante-eks-alb/838ead75e9c2ee86",
            "arn_suffix": "app/restaurante-eks-alb/838ead75e9c2ee86",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "restaurante-eks-alb-1101062315.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183826114:loadbalancer/app/restaurante-eks-alb/838ead75e9c2ee86",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "restaurante-eks-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-014b394cbd2938ac7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-087f07bea86e31b5d"
              },
              {
                "subnet_id": "subnet-0b6b12c34ba34f2b8"
              }
            ],
            "subnets": [
              "subnet-087f07bea86e31b5d",
              "subnet-0b6b12c34ba34f2b8"
            ],
            "vpc_id": "vpc-0b5a72fe8f12106a9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load-balancer",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "restaurante-vpc-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05053047b01ac33b8",
            "association_id": "eipassoc-00a184a8017632476",
            "connectivity_type": "public",
            "id": "nat-0764ca722b1da65b0",
            "network_interface_id": "eni-0a4593457e097d5c9",
            "private_ip": "10.0.1.147",
            "public_ip": "35.172.189.29",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-087f07bea86e31b5d",
            "tags": {
              "Name": "restaurante-vpc-ngw"
            },
            "tags_all": {
              "Name": "restaurante-vpc-ngw"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.restaurante-vpc-igw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-ngw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0443ef3b552693c391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0764ca722b1da65b0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0443ef3b552693c39",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.restaurante-vpc-igw",
            "aws_nat_gateway.restaurante-vpc-ngw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03ea18ea4c069c268",
            "id": "r-rtb-03ea4b679233d623e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ea4b679233d623e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.restaurante-vpc-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183826114:route-table/rtb-0443ef3b552693c39",
            "id": "rtb-0443ef3b552693c39",
            "owner_id": "590183826114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0764ca722b1da65b0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-terraform-lab-route-table"
            },
            "tags_all": {
              "Name": "private-terraform-lab-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5a72fe8f12106a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183826114:route-table/rtb-03ea4b679233d623e",
            "id": "rtb-03ea4b679233d623e",
            "owner_id": "590183826114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ea18ea4c069c268",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-restaurante-vpc-route-table"
            },
            "tags_all": {
              "Name": "public-restaurante-vpc-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5a72fe8f12106a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6e5702a1a586437",
            "route_table_id": "rtb-0443ef3b552693c39",
            "subnet_id": "subnet-099fa5f9ac84ed280"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0392a23c7ce369578",
            "route_table_id": "rtb-0443ef3b552693c39",
            "subnet_id": "subnet-04f970a50ab37fc0b"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb728f526dbe9543",
            "route_table_id": "rtb-03ea4b679233d623e",
            "subnet_id": "subnet-087f07bea86e31b5d"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043c1397c87a962ef",
            "route_table_id": "rtb-03ea4b679233d623e",
            "subnet_id": "subnet-0b6b12c34ba34f2b8"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183826114:security-group/sg-00cd4b0c6bc0a67ca",
            "description": "Allows inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00cd4b0c6bc0a67ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-014b394cbd2938ac7"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks_security_group",
            "name_prefix": "",
            "owner_id": "590183826114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "restaurante-sg"
            },
            "tags_all": {
              "Name": "restaurante-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5a72fe8f12106a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load-balancer",
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183826114:security-group/sg-014b394cbd2938ac7",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014b394cbd2938ac7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_security_group",
            "name_prefix": "",
            "owner_id": "590183826114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b5a72fe8f12106a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183826114:subnet/subnet-099fa5f9ac84ed280",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099fa5f9ac84ed280",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183826114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-restaurante-subnet-1"
            },
            "tags_all": {
              "Name": "private-restaurante-subnet-1"
            },
            "vpc_id": "vpc-0b5a72fe8f12106a9"
          },
          "dependencies": [
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183826114:subnet/subnet-04f970a50ab37fc0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f970a50ab37fc0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183826114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-restaurante-subnet-2"
            },
            "tags_all": {
              "Name": "private-restaurante-subnet-2"
            },
            "vpc_id": "vpc-0b5a72fe8f12106a9"
          },
          "dependencies": [
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183826114:subnet/subnet-087f07bea86e31b5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087f07bea86e31b5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183826114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-restaurante-subnet-1"
            },
            "tags_all": {
              "Name": "public-restaurante-subnet-1"
            },
            "vpc_id": "vpc-0b5a72fe8f12106a9"
          },
          "dependencies": [
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183826114:subnet/subnet-0b6b12c34ba34f2b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6b12c34ba34f2b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183826114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-restaurante-subnet-2"
            },
            "tags_all": {
              "Name": "public-restaurante-subnet-2"
            },
            "vpc_id": "vpc-0b5a72fe8f12106a9"
          },
          "dependencies": [
            "aws_vpc.restaurante-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "restaurante-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183826114:vpc/vpc-0b5a72fe8f12106a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ea67af749f1ae8b",
            "default_route_table_id": "rtb-047c4e900131af0e4",
            "default_security_group_id": "sg-0a097973fff28d526",
            "dhcp_options_id": "dopt-01e1e320810d19f51",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5a72fe8f12106a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047c4e900131af0e4",
            "owner_id": "590183826114",
            "tags": {
              "Name": "restaurante-vpc"
            },
            "tags_all": {
              "Name": "restaurante-vpc"
            }
          }
        }
      ]
    }
  ]
}